--- a/css/introduce.css
+++ b/css/introduce.css
@@ -1,22 +1,37 @@
 *{
     cursor: url(../img/photo/鼠标.png),
     default;
+    margin: 0;
+    padding: 0;
 }
 body{
-    background: url(../img/photo/星空背景.jpg);
+   position: relative;
+   height: 900px;
+   position: relative;
+}
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(../img/photo/极限武馆啊.png) center center no-repeat;
+    background-size: 100%;
+    filter: blur(5px);
+    z-index: -1;
 }
 .header{
     width: 100%;
     height: 85px;
     background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
 }
 #logo{
-    margin: 0 50px;
+    width: 180px;
     height: 85px;
     float: left;
-    width: 123px;
-    height: 85px;
-    object-fit: fill;
+    margin: 0 40px;
 }
 .daohang>ul>li>a{
     float: left;
@@ -24,11 +39,111 @@ body{
     color: white;
     line-height: 85px;
 }
+.daohang>ul>li>a:hover{
+    color: #00b3ff;
+}
 .daohang>ul>li{
     margin-left: 44px;
     list-style: none;
     float: left;
 }
+.daohang>ul>li>img{
+    width: 25px;
+    height: 25px;
+    margin-top: 30px;
+    margin-left: 10px;
+}
 .daohang>ul>li:nth-of-type(1){
     margin-left: 10px;
+}
+.place{
+    width: 200px;
+    height: 340px;
+    margin-left: 20px;
+    float:left;
+    margin-top: 90px;
+}
+.place>ul>li{
+    margin-top: 53px;
+    margin-left: 30px;
+   color: #ecdddd;
+    font-size: 20px;
+    float: left;
+}
+.place>ul>li>a{
+    text-decoration: none;
+    color: #ecdddd;
+}
+
+.introduce{
+    width: 570px;
+    height: 235px;
+    float: left;
+    margin-left: 25px;
+    margin-top: 130px;
+}
+.introduce>hr{
+    border: none;
+    width: 150px;
+    height: 8px;
+    background-color: rgb(201 177 112);
+}
+.introduce>h1{
+    color: white;
+    font-size: 60px;
+    margin-top: 20px;
+}
+.center{
+    width: 100%;
+    height: 340px;
+}
+.introduce>.voic{
+    width: 75%;
+    height: 55px;
+    background-color: rgb(201, 177, 112);
+    object-fit: cover;
+    margin-top: 50px;
+}
+#tnt1{
+    width: 36px; 
+    height: 50px;
+     margin-left: 15px;
+       float:left;
+}
+.introduce>.voic>.mai{
+    float: right;
+    width: 55px;
+    height: 55px;
+    background-color: #bc8909;
+}
+#tnt2{
+    width: 50px;
+    height: 50px;
+    float: right;
+}
+.introduce>.voic>span{
+    float: left;
+    line-height: 55px;
+    margin-left:70px ;
+    font-size: 20px;
+}
+.introduce>.miaoshu{
+    width: 100%;
+    height: 170px;
+    background-color: #0000009c;
+    margin-top: 10px;
+}
+.introduce>.miaoshu>img{
+    width: 788px;
+    height: 540px;
+    right: 278px;
+    bottom: 269px;
+    position: absolute;
+}
+.bottom{
+    width: 100%;
+    height: 300px;
+    background-color: #0000002b;
+    float: left;
+    margin-top: 200px;
 }
