--- a/css/register.css
+++ b/css/register.css
@@ -3,6 +3,7 @@
   padding: 0;
   margin: 0;
   text-decoration: none;
+  cursor: url(../img/photo/鼠标.png),default;
 }
 body{
   display: flex;
@@ -13,6 +14,49 @@ body{
   background-size: cover;
   position: relative;
 }
+.header{
+  width: 100%;
+  height: 85px;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0px;
+}
+#logo{
+  width: 180px;
+  height: 85px;
+  float: left;
+  margin: 0 40px;
+}
+.daohang>ul>li>a{
+  float: left;
+  text-decoration: none;
+  color: white;
+  line-height: 85px;
+}
+.daohang>ul>li>a:hover{
+  color: #00b3ff;
+}
+.daohang>ul>li{
+  margin-left: 44px;
+  list-style: none;
+  float: left;
+}
+.daohang>ul>li>img{
+  width: 25px;
+  height: 25px;
+  margin-top: 30px;
+  margin-left: 10px;
+}
+.daohang>ul>li:nth-of-type(1){
+  margin-left: 10px;
+}
+
+
+
+
+
+
+
 #player11{
   position: absolute;
   width: 44%;
