--- a/css/introduce.css
+++ b/css/introduce.css
@@ -6,8 +6,7 @@
 }
 body{
    position: relative;
-   height: 900px;
-   position: relative;
+   height: 945px;
 }
 body::before {
     content: '';
@@ -21,7 +20,7 @@ body::before {
     filter: blur(5px);
     z-index: -1;
 }
-.header{
+#header{
     width: 100%;
     height: 85px;
     background-color: rgba(0, 0, 0, 0.5);
@@ -132,18 +131,44 @@ body::before {
     height: 170px;
     background-color: #0000009c;
     margin-top: 10px;
+    z-index: 2;
+    padding: 10px 10px;
 }
-.introduce>.miaoshu>img{
-    width: 788px;
-    height: 540px;
-    right: 278px;
-    bottom: 269px;
+.introduce>.miaoshu>p{
+    color: white; font-size: 20px; padding: 10px;
+}
+.introduce>.miaoshu>.player>img{
+    width: 1300px;
+    height: 1025px;
+    right: -110px;
+    bottom: 0px;
     position: absolute;
+    z-index: -1;
+}
+.player{
+    display: none;
+}
+.active{
+    display: block;
 }
 .bottom{
     width: 100%;
     height: 300px;
     background-color: #0000002b;
+    margin-top: 215px;
     float: left;
-    margin-top: 200px;
+    z-index: 5;
+    position: relative;
+}
+.bottom>ul>li{
+    height: 165px;
+    width: 175px;
+    float: left;
+    margin: 80px 80px;
+    list-style: none;
+}
+.bottom>ul>li>a>img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
