--- a/css/register.css
+++ b/css/register.css
@@ -50,13 +50,6 @@ body{
 .daohang>ul>li:nth-of-type(1){
   margin-left: 10px;
 }
-
-
-
-
-
-
-
 #player11{
   position: absolute;
   width: 44%;
@@ -126,4 +119,21 @@ body{
   letter-spacing: 3px;
   background-image: linear-gradient(to left,
   #fd79a8,#a29bf6);
+}
+ .hidden{
+  position: absolute;
+  width: 26px;
+  height: 21px;
+  top: 203px;
+  right: 74px;
+  display: block;
+  
+}
+.visit{
+  position: absolute;
+  width: 56px;
+  height: 70px;
+  top: 178px;
+  right: 60px;
+  display: none;
 }
