--- a/css/index.css
+++ b/css/index.css
@@ -114,7 +114,7 @@
     height: 330px;
 }
 .top1>.left{
-    width: 218px;
+    width: 14%;
     height: 100%;
     float: left;
     background: url(../img/photo/炫酷边框.jpg)  no-repeat center;
@@ -148,7 +148,7 @@
     color: #00b3ff;
 }
 .top1>.center{
-    width: 815px;
+    width: 63%;
     height: 100%;
     float: left;
     margin: 0 10px;
@@ -169,7 +169,7 @@
         outline:-webkit-focus-ring-color auto 0px;
     }
 .top1>.right{
-    width: 290px;
+    width: 20%;
     height:100%;
     float: left;
     margin-left: 9px;
@@ -675,7 +675,7 @@
     padding-top: 40px;
     width: 100%;
     height: 280px;
-    background-color: #282828;
+    background-color: black;
 }
 .footer>.context{
     width: 1230px;
