--- a/css/register.css
+++ b/css/register.css
@@ -1,4 +1,3 @@
-
 *{
   padding: 0;
   margin: 0;
@@ -10,7 +9,7 @@ body{
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-image: url(../img/photo/登录界面1.avif);
+  background-image: url(../img/photo/浩瀚星空.jpeg);
   background-size: cover;
   position: relative;
 }
@@ -77,11 +76,27 @@ body{
       rgba(255,255,255,.4)
   );
   /* 使背景模糊化 */
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(0px);
+  box-shadow: 0 0 20px #6a63cd;
+  border-radius: 15px;
+}
+.register{
+  width: 550px;
+  height: 490px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: linear-gradient(
+      to right bottom,
+      rgba(255,255,255,.7),
+      rgba(255,255,255,.5),
+      rgba(255,255,255,.4)
+  );
+  /* 使背景模糊化 */
+  backdrop-filter: blur(0px);
   box-shadow: 0 0 20px #a29bfe;
   border-radius: 15px;
 }
-
 .table{
   font: 900 40px '';
   text-align: center;
@@ -123,14 +138,14 @@ body{
   color: #fff;
   letter-spacing: 3px;
   background-image: linear-gradient(to left,
-  #fd79a8,#a29bf6);
+  #79f6fd,#b19bf6);
   margin-left: 8px;
 }
  .hidden{
   position: absolute;
   width: 26px;
   height: 21px;
-  top: 225px;
+  top: 170px;
   right: 128px;
   display: block;
   
@@ -139,7 +154,23 @@ body{
   position: absolute;
   width: 56px;
   height: 70px;
-  top: 201px;
+  top: 146px;
+  right: 112px;
+  display: none;
+}
+.hide{
+  position: absolute;
+  width: 26px;
+  height: 21px;
+  top: 275px;
+  right: 128px;
+  display: block;
+}
+.see{
+  position: absolute;
+  width: 56px;
+  height: 70px;
+  top: 250px;
   right: 112px;
   display: none;
 }
