--- a/css/introduce.css
+++ b/css/introduce.css
@@ -5,21 +5,31 @@
     padding: 0;
 }
 body{
-   position: relative;
+   /* position: relative; */
    height: 945px;
+   width: 100%;
+   height: 100%;
+   background: url(../img/photo/宇宙穿梭.jpg);
+   background-size: 100%;
+   /* filter: blur(5px); */
+   z-index: -1;
+
 }
-body::before {
+p{
+    font-size: 25px;
+}
+/* body::before {
     content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../img/photo/极限武馆啊.png) center center no-repeat;
+    background: url(../img/photo/宇宙穿梭.jpg) center center no-repeat;
     background-size: 100%;
     filter: blur(5px);
     z-index: -1;
-}
+} */
 #header{
     width: 100%;
     height: 85px;
@@ -71,7 +81,7 @@ body::before {
 }
 .place>ul>li>a{
     text-decoration: none;
-    color: #ecdddd;
+    color: aqua;
 }
 
 .introduce{
@@ -133,23 +143,29 @@ body::before {
     margin-top: 10px;
     z-index: 2;
     padding: 10px 10px;
+    color: white;
 }
 .introduce>.miaoshu>p{
     color: white; font-size: 20px; padding: 10px;
 }
-.introduce>.miaoshu>.player>img{
-    width: 1300px;
-    height: 1025px;
-    right: -110px;
+.introduce>.miaoshu>ul>.player>img{
+    width: 100%;
+    height: 100%;
+    right: 0px;
     bottom: 0px;
     position: absolute;
     z-index: -1;
+    object-fit: contain;
+    transform: translateX(300px);
 }
 .player{
     display: none;
 }
 .active{
     display: block;
+}
+.show{
+    display: block!important
 }
 .bottom{
     width: 100%;
@@ -169,7 +185,7 @@ body::before {
     height: 165px;
     width: 175px;
     float: left;
-    padding: 80px 59px;
+    padding: 68px 59px;
     list-style: none;
 }
 .bottom>ul>li>a>img{
@@ -177,3 +193,13 @@ body::before {
     height: 100%;
     object-fit: cover;
 }
+/* #jijia2>.player>img{
+    width: 100%;
+    height: 100%;
+    right: 0px;
+    bottom: 0px;
+    position: absolute;
+    z-index: -1;
+    object-fit: contain;
+    transform: translateX(300px);
+} */
